--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   dio: ^0.1.7
   json_annotation: ^1.0.0
   image_picker: ^0.4.6
+  barcode_scan: ^0.0.4
+  video_player: ^0.6.4
+  audioplayer: ^0.5.0
+
 
 dev_dependencies:
   flutter_test:
